--- a/rules.html
+++ b/rules.html
@@ -111,9 +111,9 @@
       <li><strong>Вудилища:</strong>
         <ul>
           <li>У секторі дозволено мати необмежену кількість запасних вудилищ.</li>
-          <li><strong>Одночасно в воді і на род-поді — не більше 2 робочих вудилищ.</strong></li>
+          <li><strong>Одночасно в воді та на род-поді — не більше 2 робочих вудилищ.</strong></li>
           <li>Оснащеними— <strong>не більше 1 гачка на вудилище</strong>.</li>
-          <li><strong>Заборонено закидати третє робоче вудилище</strong>, доки одне з двох робочих не вимотане.</li>
+          <<li>До використання дозволяються <strong>коропові та фідерні вудилища</strong>.</li>
         </ul>
       </li>
 
@@ -129,6 +129,7 @@
           <li>Основна волосінь — <strong>не менше 0.25 мм</strong>.</li>
           <li>Шок-лідер дозволено <strong>не більше 10 м</strong>.</li>
           <li>Шнур — <strong>Заборонено використання в якості основної волосіні для робочих вудилищ</strong>.</li>
+          <li>Використання шнура дозволяється виключно на <strong>сподових</strong> та <strong>маркерних</strong> вудилищах.</li>
         </ul>
       </li>
 
