--- a/rules.html
+++ b/rules.html
@@ -106,10 +106,11 @@
     <h3>4. Правила лову та оснащення</h3>
     <ul>
       <li><strong>Заборонено використання будь-яких застібок та вертлюгів у складі робочих монтажів.</strong></li>
-      <li><strong>Довжина вудилищ:</strong> не більше <strong>4.57 м</strong>.</li>
+      
 
       <li><strong>Вудилища:</strong>
         <ul>
+          <li><strong>Довжина вудилищ:</strong> не більше <strong>4.57 м</strong>.</li>
           <li>У секторі дозволено мати необмежену кількість запасних вудилищ.</li>
           <li><strong>Одночасно в воді та на род-поді — не більше 2 робочих вудилищ.</strong></li>
           <li>Оснащеними— <strong>не більше 1 гачка на вудилище</strong>.</li>
@@ -172,6 +173,8 @@
         <ul>
           <li>Антисептик.</li>
           <li><strong>10 коропових мішків</strong> (мінімум).</li>
+          <li>Коропові мішки із затяжкою (шнурком) — <strong>не дозволяються</strong>.</li>
+<li>До використання допускаються лише коропові мішки з <strong>zip-замком</strong> Наявність <strong>поплавця</strong> є <strong>бажаною</strong> та рекомендується з метою можливості швидкого виявлення та вивільнення риби у разі втрати.</li>
           <li>Короповий мат: якщо на водоймі матів немає — мат обов'язковий</li>
         </ul>
       </li>
