--- a/rules.html
+++ b/rules.html
@@ -220,7 +220,7 @@
         <tr><td>Недбале поводження з рибою</td><td>Жовта/Червона (за рішенням судді)</td></tr>
         <tr><td>Заборонена оснастка / порушення правил годування</td><td>Жовта/Червона</td></tr>
         <tr><td>Алкоголь у великих дозах, агресія</td><td>Миттєва дискваліфікація</td></tr>
-        <tr><td>Фото без судді</td><td>Жовта</td></tr>
+        <tr><td>Фото без присутності судді</td><td>Жовта</td></tr>
       </tbody>
     </table>
 
