--- a/rules.html
+++ b/rules.html
@@ -239,7 +239,9 @@
     <h3>11. Призи</h3>
     <ul>
       <li>Призовий фонд формується організаторами та спонсорами.</li>
-      <li>Номінації та розподіл призів відбувається окремо для кожного етапу.</li>
+      <li>Для кожної зони передбачені <strong>кубки</strong> за призові місця.</li>
+      <li>Додатково команди отримують <strong>призи від спонсорів</strong> у своїх зонах.</li>
+   </ul>
     </ul>
 
     <h3>12. Контакти</h3>
