--- a/rules.html
+++ b/rules.html
@@ -190,6 +190,9 @@
     <ul>
       <li><strong>Знаходження гостей і глядачів в зоні проведення змагань дозволено тільки в світлий час доби.</strong></li>
       <li>Заїзд гостей у сектор автомобілем <strong>заборонено</strong>.</li>
+      <li>Усі гості та відвідувачі зобов’язані залишати свої транспортні засоби виключно на парковці.</li>
+      <li>Прохід до секторів дозволяється лише у пішому порядку.</li>
+      <li>Переміщення автотранспортом територією секторів та між ними категорично заборонено.</li>
     </ul>
 
     <h3>Правила та Fair play</h3>
