--- a/rules.html
+++ b/rules.html
@@ -227,19 +227,51 @@
       </tbody>
     </table>
 
-    <h3>9. Протести</h3>
+    <h3>9. Правила безпеки</h3>
+<ul>
+  <li><strong>Під час грози:</strong>
+    <ul>
+      <li>Змагання призупиняються на час, визначений організатором.</li>
+      <li>Усі команди зобов’язані миттєво витягнути всі вудилища з води.</li>
+      <li>Під час призупинення <strong>забороняється</strong> тримати вудилища в руках, робити закидання, маркування, підгодовування та будь-які інші дії, пов’язані з ловлею.</li>
+      <li><strong>Невиконання вимоги витягнути снасті = червона картка = дискваліфікація команди.</strong></li>
+    </ul>
+  </li>
+
+  <li><strong>Алкоголь та заборонені речовини:</strong>
+    <ul>
+      <li>Перебування в стані алкогольного чи наркотичного сп'яніння заборонено.</li>
+      <li>Фіксація такого стану суддями карається згідно з рішенням суддівської колегії.</li>
+    </ul>
+  </li>
+
+  <li><strong>Снасті та обладнання:</strong>
+    <ul>
+      <li>Забороняється залишати снасті без нагляду під час змагань.</li>
+      <li>Організатор та адміністрація водойми не несуть відповідальності за втрачені чи пошкоджені речі учасників.</li>
+    </ul>
+  </li>
+
+  <li><strong>Робота на березі в темний час:</strong>
+    <ul>
+      <li>Переміщення між секторами дозволено лише з увімкненими ліхтарями.</li>
+    </ul>
+  </li>
+</ul>
+
+    <h3>10. Протести</h3>
     <ul>
       <li>Протест подається головному судді або організатору змагань протягом <strong>30 хвилин</strong> після інциденту.</li>
       <li>Без доказів протест може бути не розглянутий.</li>
       <li>Рішення суддів — остаточне.</li>
     </ul>
 
-    <h3>10. Фінансові умови</h3>
+    <h3>11. Фінансові умови</h3>
     <ul>
       <li>Відмова від участі — внесок <strong>не повертається</strong>.</li>
     </ul>
 
-    <h3>11. Призи</h3>
+    <h3>12. Призи</h3>
     <ul>
       <li>Призовий фонд формується організаторами та спонсорами.</li>
       <li>Для кожної зони передбачені <strong>кубки</strong> за призові місця.</li>
@@ -247,7 +279,7 @@
    </ul>
     </ul>
 
-    <h3>12. Контакти</h3>
+    <h3>13. Контакти</h3>
     <p>
       Для участі або уточнення інформації:<br>
       📞 <a href="tel:+380631731116">+380 63 173 11 16</a><br>
