--- a/events/index.html
+++ b/events/index.html
@@ -8,6 +8,7 @@
   <!-- Стилі та скрипт з кореня -->
   <link rel="stylesheet" href="../assets/css/main.css">
   <script defer src="../assets/js/config.js"></script>
+  <script defer src="archive.js"></script>
 
   <style>
     body.archive-page{
