--- a/events/index.html
+++ b/events/index.html
@@ -113,6 +113,18 @@
 
     <div class="seasons-grid">
 
+  <!-- Статична кнопка сезону -->
+  <a class="season-card" href="season-2026.html">
+    <div>
+      <div class="season-year">Сезон 2026</div>
+      <div class="season-desc">П’ять етапів + Фінал</div>
+    </div>
+    <div class="season-btn">Відкрити сезон</div>
+  </a>
+
+  <!-- Сюди JS додає архів турнірів -->
+</div>
+
     </div>
   </section>
 </main>
