--- a/rules.html
+++ b/rules.html
@@ -76,6 +76,9 @@
       <li><strong>Командний формат:</strong> 1–3 повноцінних учасники.</li>
       <li><strong>STALKER (соло, якщо оголошено):</strong> тільки 1 учасник у секторі.</li>
       <li>Регламент діє однаково для командного та соло-формату.</li>
+      <li><strong>Реєстрація вважається дійсною лише після оплати.</strong></li>
+  <li><strong>Список учасників формується виключно за датою оплати.</strong></li>
+  <li><strong>Місце в основному списку отримує команда, яка здійснила оплату першою.</strong></li>
       <li>Організатор залишає за собою право вносити технічні уточнення до регламенту, які не змінюють суті змагань, з обов’язковим повідомленням учасників до старту.</li>
     </ul>
 
