--- a/lakes.html
+++ b/lakes.html
@@ -247,8 +247,7 @@
           <span class="lake-label">Лелехівка</span>
         </div>
         <div class="lake-body">
-          <p>Класична розбивка на зони A/B/C. До 27 секторів, комфортний під’їзд
-            та стабільний кльов для серйозних марафонів.</p>
+          <p>Лелехівка — молода спортивна водойма в Яворівському районі, що пропонує комфортні умови для відпочинку та результативної риболовлі.</p>
           <div class="tags">
             <span class="tag">Зони: A • B • C</span>
             <span class="tag">До 27 секторів</span>
@@ -269,8 +268,7 @@
           <span class="lake-label">Пристань</span>
         </div>
         <div class="lake-body">
-          <p>Водойма з гарним потенціалом білого амура, чистими берегами
-            та зручною інфраструктурою для команд.</p>
+          <p>Пристань — спортивна водойма з трофейним коропом і білим амуром, із хорошими умовами для активної риболовлі</p>
           <div class="tags">
             <span class="tag">Зони: A • B • C</span>
             <span class="tag">Комфортні сектори</span>
@@ -291,8 +289,7 @@
             <span class="lake-label">Bounty</span>
         </div>
         <div class="lake-body">
-          <p>Глибші ділянки, перспективні бровки та високий шанс на Big Fish.
-            Рекомендуємо міцні монтажі та продуману тактику.</p>
+          <p>Bounty — спортивна водойма Яворівського району, відома трофейним коропом і реальною боротьбою за Big Fish.</p>
           <div class="tags">
             <span class="tag">Зони: A • B • C</span>
             <span class="tag">Big Fish потенціал</span>
