--- a/rules.html
+++ b/rules.html
@@ -52,7 +52,7 @@
     <ul>
       <li>Формат: «зловив — відпустив» (Catch & Release).</li>
       <li>Мета: розвиток спортивного карпфішингу, безпека та гуманне ставлення до риби.</li>
-      <li>Спірні питання вирішує головний суддя. Його рішення є остаточними та оскарженню не підлягають.</li>
+      <li>Зробити риболовні змагання простими, чесними й доступними для кожного.</li>
     </ul>
 
     <h3>1.2. Мінімальна кількість учасників</h3>
@@ -71,6 +71,14 @@
 
     <h2>РОЗДІЛ 2. ФОРМАТ УЧАСТІ ТА РЕЄСТРАЦІЯ</h2>
 
+<h3>2.0. Тривалість та розклад</h3>
+<ul>
+  <li><strong>Тривалість змагань:</strong> 48 годин.</li>
+  <li><strong>Старт:</strong> п'ятниця о 12:00.</li>
+  <li><strong>Фініш:</strong> неділя о 12:00.</li>
+</ul>
+    
+
     <h3>2.1. Формат участі</h3>
     <ul>
       <li><strong>Командний формат:</strong> 1–3 повноцінних учасники.</li>
@@ -81,8 +89,7 @@
 
     <h3>2.2. Реєстрація та оплата</h3>
     <ul>
-      <li>Подана заявка <strong>не гарантує</strong> участь у змаганнях.</li>
-      <li><strong>Реєстрація вважається дійсною лише після оплати.</strong></li>
+      <li><strong>Реєстрація вважається дійсною лише після оплати внеску.</strong></li>
       <li><strong>Список учасників формується виключно за датою оплати.</strong></li>
       <li><strong>Місце в основному списку отримує команда, яка здійснила оплату першою.</strong></li>
       <li>Організатор не зобов'язаний утримувати місце за неоплаченими заявками.</li>
@@ -108,7 +115,7 @@
     <h3>3.2. Межі сектора та зони</h3>
     <ul>
       <li>Учасники зобов'язані дотримуватися меж своєї зони ловлі.</li>
-      <li>Робота дозволена виключно в напрямку, <strong>який відповідає крайнім секторам зони</strong>, або у напрямку, визначеному суддею.</li>
+      <li>Робоча зона дозволена виключно в напрямку, <strong>який відповідає крайнім секторам зони</strong>, або у напрямку, визначеному суддею.</li>
     </ul>
 
     <h3>3.3. Пересування</h3>
@@ -155,7 +162,7 @@
       <li><strong>Дозволено:</strong> класика та флет.</li>
       <li>Монтажі мають відповідати принципу <strong>безпечного звільнення риби</strong> від грузу/годівниці у разі обриву.</li>
       <li>Флет-годівниця або вантаж при використанні лідкору повинні мати вільний хід по лідкору та скидатися у разі обриву оснастки.</li>
-      <li><strong>Заборонено:</strong> оснастка «вертоліт», «гарбуз», годівниці.</li>
+      <li><strong>Заборонено:</strong> оснастка «вертоліт», «гарбуз»</li>
     </ul>
 
     <h3>4.5. Плавзасоби</h3>
@@ -170,6 +177,7 @@
       <li>Дозволено лише у світлий час, який визначає організатор.</li>
       <li>Дозволено годування одночасно у <strong>2 спомби</strong>.</li>
       <li>Дозволені розміри: <strong>Mini</strong> та <strong>MidiX</strong>.</li>
+      <li><strong>Тільки: </strong> малого та середнього розміру</li>
       <li><strong>Заборонено:</strong> спомб Large.</li>
     </ul>
 
@@ -180,7 +188,7 @@
 
     <h3>5.3. Насадки</h3>
     <ul>
-      <li><strong>Заборонено:</strong> жива насадка.</li>
+      <li><strong>Заборонено:</strong> жива насадка. </li>
       <li><strong>Тигровий горіх:</strong> дозволено лише <strong>мелений</strong> (подрібнений через м'ясорубку).</li>
     </ul>
 
@@ -192,7 +200,7 @@
       <li><strong>Мінімум 10 коропових мішків.</strong></li>
       <li>Коропові мішки із затяжкою (шнурком) — <strong>не дозволяються</strong>.</li>
       <li>До використання допускаються лише коропові мішки з <strong>zip-замком</strong>.</li>
-      <li>Наявність <strong>поплавця</strong> є бажаною та рекомендується для можливості швидкого виявлення та вивільнення риби у разі втрати.</li>
+      <li>Наявність <strong>поплавця на короповому мішку є бажаною</strong>. Поплавець дозволяє швидко виявити місце знаходження мішка у разі його втрати у воді.</li>
       <li>Короповий мат: якщо на водоймі матів немає — мат обов'язковий.</li>
     </ul>
 
@@ -262,8 +270,7 @@
     <ul>
       <li>Тиша, порядок та чистота у секторі — обов'язкові.</li>
       <li>Заборонені конфлікти, агресія, маніпуляції, приховування риби.</li>
-      <li>Система попереджень: усне попередження → жовта картка → червона картка (дискваліфікація).</li>
-      <li>Три усні попередження = жовта картка. Дві жовті = дискваліфікація.</li>
+      <li>Три усні попередження = жовта картка. Дві жовті/червона = дискваліфікація.</li>
     </ul>
 
     <h3>9.2. Штрафні санкції</h3>
@@ -275,8 +282,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr><td>Годування цілим тигровим горіхом</td><td>Жовта картка</td></tr>
-        <tr><td>Порушення часу годування / задіяння більше 2 спомбів</td><td>Жовта картка</td></tr>
+        <tr><td>Порушення часу годування,годування цілим тигровим горіхом</td><td>Жовта картка</td></tr>
         <tr><td>Ловля/годування за межами свого сектору/зони</td><td>Жовта картка</td></tr>
         <tr><td>Недбале поводження з рибою</td><td>Жовта/Червона (за рішенням судді)</td></tr>
         <tr><td>Заборонена оснастка / порушення правил годування</td><td>Жовта/Червона</td></tr>
