--- a/rules.html
+++ b/rules.html
@@ -332,8 +332,7 @@
       📞 <a href="tel:+380978824845">+38 (097) 882-48-45</a>
     </p>
 
-    <div class="alert alert--info">
-      <strong>Примітка:</strong> Організатор залишає за собою право вносити зміни до регламенту з обов'язковим повідомленням учасників до старту змагань.
+    <div class="alert alert--info"
     </div>
 
   </section>
