--- a/rules.html
+++ b/rules.html
@@ -132,15 +132,29 @@
 
     <h2>РОЗДІЛ 4. ПРАВИЛА ЛОВУ ТА ОСНАЩЕННЯ</h2>
 
-    <h3>4.1. Вудилища</h3>
+<h3>4.0. Вудилища</h3>
+<ul>
+  <li><strong>Довжина:</strong> не більше <strong>4.57 м</strong>.</li>
+  <li><strong>Типи:</strong> дозволені <strong>коропові та фідерні вудилища</strong>.</li>
+  <li><strong>Запасні вудилища:</strong> дозволена необмежена кількість.</li>
+  <li><strong>Одночасно в воді та на род-поді:</strong> не більше <strong>2 робочих вудилищ</strong>.</li>
+  <li><strong>Оснащеними:</strong> не більше <strong>1 гачка на вудилище</strong>.</li>
+  <li><strong>Заборонено</strong> закидати третє робоче вудилище, доки одне з двох робочих не вимотане.</li>
+</ul>
+
+<h3>4.1. Закидання та виважування</h3>
+<ul>
+  <li><strong>Закидання, чи виважування проводить :</strong> виключно <strong>склад команди, зареєстрований на турнірі</strong>.</li>
+  <li><strong>Заборонено:</strong> будь-яка допомога з боку гостей, сусідів чи третіх осіб під час закиду чи виважування.</li>
+  <li><strong>Єдиний виняток:</strong> участь судді у випадках форс-мажору:
     <ul>
-      <li><strong>Довжина:</strong> не більше <strong>4.57 м</strong>.</li>
-      <li><strong>Типи:</strong> дозволені <strong>коропові та фідерні вудилища</strong>.</li>
-      <li><strong>Запасні вудилища:</strong> дозволена необмежена кількість.</li>
-      <li><strong>Одночасно в воді та на род-поді:</strong> не більше <strong>2 робочих вудилищ</strong>.</li>
-      <li><strong>Оснащеними:</strong> не більше <strong>1 гачка на вудилище</strong>.</li>
-      <li><strong>Заборонено</strong> закидати третє робоче вудилище, доки одне з двох робочих не вимотане.</li>
+      <li>переплутані снасті між секторами;</li>
+      <li>небезпека для риби;</li>
+      <li>небезпека для рибалки.</li>
     </ul>
+  </li>
+</ul>
+
 
     <h3>4.2. Маркеріння</h3>
     <ul>
