--- a/rules.html
+++ b/rules.html
@@ -200,11 +200,26 @@
       <li>Дозволена цілодобово.</li>
     </ul>
 
-    <h3>5.3. Насадки</h3>
+    <h3>5.3. Насадки та прикорм</h3>
+<ul>
+  <li><strong>Заборонено:</strong>
     <ul>
-      <li><strong>Заборонено:</strong> жива насадка. </li>
-      <li><strong>Тигровий горіх:</strong> дозволено лише <strong>мелений</strong> (подрібнений через м'ясорубку).</li>
+      <li><strong>Годування цілим тигровим горіхом.</strong></li>
+      <li>приманки та підгодовування тваринного походження (риба, ікра, хробаки, опариш, мотиль, м'ясо, птиця, сири, молюски);</li>
+      <li>риб'яча ікра у будь-якому вигляді;</li>
+      <li>жива насадка.</li>
     </ul>
+  </li>
+  <li><strong>Дозволено:</strong>
+    <ul>
+      <li>бойли, пелетс, пасти;</li>
+      <li>варені/пропарені зерна (кукурудза, горох, конопля, тигровий горіх тільки мелений - через м'ясорубку .);</li>
+      <li>ПВА-матеріали (мішки, стрічки, сітки);</li>
+      <li>рідкі та сухі атрактанти (діпи, ароматизатори).</li>
+    </ul>
+  </li>
+</ul>
+
 
     <h2>РОЗДІЛ 6. ПОРЯДОК ЗВАЖУВАННЯ ТА ГУМАННЕ ПОВОДЖЕННЯ</h2>
 
