--- a/rules.html
+++ b/rules.html
@@ -212,9 +212,9 @@
   </li>
   <li><strong>Дозволено:</strong>
     <ul>
-      <li>бойли, пелетс, пасти;</li>
-      <li>варені/пропарені зерна (кукурудза, горох, конопля, тигровий горіх тільки мелений - через м'ясорубку .);</li>
-      <li>ПВА-матеріали (мішки, стрічки, сітки);</li>
+      <li>бойли, пелетс, зернові;</li>
+      <li>варені/пропарені зерна</li>
+      <li>тигровий горіх тільки мелений,пропущений через м'ясорубку</li>
       <li>рідкі та сухі атрактанти (діпи, ароматизатори).</li>
     </ul>
   </li>
