--- a/rules.html
+++ b/rules.html
@@ -205,8 +205,8 @@
   <li><strong>Заборонено:</strong>
     <ul>
       <li><strong>Годування цілим тигровим горіхом.</strong></li>
-      <li>приманки та підгодовування тваринного походження (риба, ікра, хробаки, опариш, мотиль, м'ясо, птиця, сири, молюски);</li>
-      <li>риб'яча ікра у будь-якому вигляді;</li>
+      <li>приманки та підгодовування тваринного походження ;</li>
+      <li>ікра у будь-якому вигляді;</li>
       <li>жива насадка.</li>
     </ul>
   </li>
