--- a/cabinet.html
+++ b/cabinet.html
@@ -36,10 +36,17 @@
     .team-meta{display:flex;flex-wrap:wrap;gap:6px;font-size:.8rem;}
     .meta-pill{border-radius:999px;padding:4px 8px;background:#020617;border:1px solid #374151;color:#e5e7eb;}
     .meta-pill strong{color:#facc15;font-weight:600;}
-    .avatar-upload{margin-top:8px;display:flex;align-items:center;gap:8px;font-size:.8rem;}
-    .avatar-upload input[type="file"]{font-size:.75rem;max-width:160px;}
-    .avatar-small-btn{border-radius:999px;border:none;padding:5px 10px;font-size:.78rem;font-weight:600;background:#0f172a;color:#e5e7eb;cursor:pointer;}
-    .avatar-small-btn:hover{background:#111827;}
+    
+    /* === CLOUDINARY WIDGET БЛОК === */
+    .avatar-section{margin-top:12px;padding-top:12px;border-top:1px solid #1f2937;}
+    .avatar-label{font-size:.8rem;color:#9ca3af;margin-bottom:8px;}
+    .avatar-small-btn{border-radius:999px;border:1px solid #374151;background:#0f172a;color:#e5e7eb;padding:6px 14px;font-size:.8rem;cursor:pointer;transition:all .2s;}
+    .avatar-small-btn:hover{background:#1e293b;border-color:#facc15;}
+    #avatarMsg{margin-top:6px;font-size:.8rem;min-height:20px;}
+    #avatarMsg.ok{color:#22c55e;}
+    #avatarMsg.err{color:#ef4444;}
+    /* === КІНЕЦЬ БЛОКУ === */
+    
     .members-list{margin-top:10px;border-top:1px solid #1f2937;padding-top:10px;}
     .members-title{font-size:.86rem;text-transform:uppercase;letter-spacing:.16rem;color:#9ca3af;margin-bottom:6px;}
     .stats-grid{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:10px;margin:8px 0 10px;font-size:.85rem;}
@@ -90,7 +97,7 @@
 
 <div class="team-header">
   <div class="team-avatar-wrap">
-    <img id="cabinetAvatarImg" class="team-avatar">
+    <img id="cabinetAvatarImg" class="team-avatar" alt="Аватар">
     <div id="cabinetAvatarPlaceholder" class="team-avatar-placeholder">SC</div>
   </div>
 
@@ -106,14 +113,15 @@
       </div>
     </div>
 
-    <div class="avatar-upload">
-      <label for="avatarFile">Аватар учасника:</label>
-      <input type="file" id="avatarFile" accept="image/*">
-      <button id="avatarUploadBtn" class="avatar-small-btn">Зберегти</button>
+    <!-- === CLOUDINARY WIDGET БЛОК АВАТАРКИ === -->
+    <div class="avatar-section">
+      <div class="avatar-label">Аватар учасника</div>
+      <button type="button" class="avatar-small-btn" id="openCloudinaryWidget">
+        Змінити аватар
+      </button>
+      <div id="avatarMsg" class="cabinet-small-muted"></div>
     </div>
-
-    <!-- ✅ FIX -->
-    <div id="avatarMsg" class="cabinet-small-muted"></div>
+    <!-- === КІНЕЦЬ БЛОКУ === -->
 
     <div id="cabinetMsg"></div>
   </div>
@@ -161,6 +169,9 @@
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage-compat.js"></script>
+
+<!-- Cloudinary Upload Widget -->
+<script src="https://widget.cloudinary.com/v2.0/global/all.js"></script>
 
 <script src="assets/js/firebase-init.js"></script>
 <script src="assets/js/cabinet.js"></script>
