--- a/events/index.html
+++ b/events/index.html
@@ -90,16 +90,16 @@
     </a>
 
     <nav class="nav" id="nav">
-  <a href="/index.html" class="nav__link">Головна</a>
-  <a href="/rules.html" class="nav__link">Регламент</a>
-  <a href="/register.html" class="nav__link">Реєстрація</a>
-  <a href="/live.html" class="nav__link">Live</a>
-  <a href="/rating.html" class="nav__link">Рейтинг</a>
-  <a href="/lakes.html" class="nav__link">Водойми</a>
-  <a href="/sponsors.html" class="nav__link">Спонсори</a>
-  <a href="/events/index.html" class="nav__link">Архів</a>
-  <a href="/cabinet.html" class="nav__link">Мій кабінет</a>
-</nav>
+      <a href="/index.html" class="nav__link">Головна</a>
+      <a href="/rules.html" class="nav__link">Регламент</a>
+      <a href="/register.html" class="nav__link">Реєстрація</a>
+      <a href="/live.html" class="nav__link">Live</a>
+      <a href="/rating.html" class="nav__link">Рейтинг</a>
+      <a href="/lakes.html" class="nav__link">Водойми</a>
+      <a href="/sponsors.html" class="nav__link">Спонсори</a>
+      <a href="/events/index.html" class="nav__link">Архів</a>
+      <a href="/cabinet.html" class="nav__link">Мій кабінет</a>
+    </nav>
 
     <button class="burger" id="burger">
       <span></span><span></span><span></span>
@@ -111,20 +111,21 @@
   <section class="container section archive-hero">
     <h1 class="archive-title title-gradient">Архів турнірів STOLAR CARP</h1>
 
+    <!-- ❗ Виправлений блок -->
     <div class="seasons-grid">
 
-  <!-- Статична кнопка сезону -->
-  <a class="season-card" href="season-2026.html">
-    <div>
-      <div class="season-year">Сезон 2026</div>
-    </div>
-    <div class="season-btn">Відкрити сезон</div>
-  </a>
+      <!-- Статична кнопка сезону -->
+      <a class="season-card" href="season-2026.html">
+        <div>
+          <div class="season-year">Сезон 2026</div>
+        </div>
+        <div class="season-btn">Відкрити сезон</div>
+      </a>
 
-  <!-- Сюди JS додає архів турнірів -->
-</div>
-
+      <!-- Сюди JS додає архів турнірів -->
     </div>
+    <!-- ❗ Далі зайвого </div> більше НЕМає -->
+    
   </section>
 </main>
 
