--- a/sponsors.html
+++ b/sponsors.html
@@ -269,8 +269,7 @@
         <span>STOLAR CARP</span>
       </h1>
       <p class="sponsors-lead">
-        Надійні бренди, які підтримують розвиток спортивного коропового рибальства.
-        Клікніть по логотипу, щоб перейти на сторінку партнера.
+        МАГАЗИНИ СПОНСОРІВ
       </p>
     </div>
 
