--- a/sponsors.html
+++ b/sponsors.html
@@ -262,10 +262,9 @@
     <!-- HERO -->
     <div class="sponsors-hero">
       <div class="sponsors-kicker">
-        ПАРТНЕРИ ТУРНІРУ
+        ПАРТНЕРИ ТА СПОНСОРИ ТУРНІРУ
       </div>
       <h1 class="page-title title-gradient">
-        <span>СПОНСОРИ</span>
         <span>STOLAR CARP</span>
       </h1>
       <p class="sponsors-lead">
