--- a/sponsors.html
+++ b/sponsors.html
@@ -230,38 +230,14 @@
       outline:none !important;
     }
   </style>
-</head>
 
-<body>
-<header class="header">
-  <div class="container header__row">
-    <a class="logo" href="index.html">
-      <span class="logo__mark">SC</span>
-      <span class="logo__text">STOLAR CARP</span>
-    </a>
-
-    <nav class="nav" id="nav">
-  <a href="/index.html" class="nav__link">Головна</a>
-  <a href="/rules.html" class="nav__link">Регламент</a>
-  <a href="/register.html" class="nav__link">Реєстрація</a>
-  <a href="/live.html" class="nav__link">Live</a>
-  <a href="/rating.html" class="nav__link">Рейтинг</a>
-  <a href="/lakes.html" class="nav__link">Водойми</a>
-  <a href="/sponsors.html" class="nav__link">Спонсори</a>
-  <a href="/events/index.html" class="nav__link">Архів</a>
-  <a href="/cabinet.html" class="nav__link">Мій кабінет</a>
-</nav>
-
-    <button class="burger" id="burger"><span></span><span></span><span></span></button>
-  </div>
-</header>
 
 <main class="main">
   <section class="container section">
 
     <!-- HERO -->
     <div class="sponsors-hero">
-      <div class="sponsors-kicker">
+      <di<div data-include-html="partials/header.html"></div>v class="sponsors-kicker">
         ПАРТНЕРИ ТА СПОНСОРИ ТУРНІРУ
       </div>
       <h1 class="page-title title-gradient">
