--- a/rating.html
+++ b/rating.html
@@ -308,6 +308,7 @@ body[data-stages="0"] .table--season tbody td:nth-child(8){
     <nav class="nav" id="nav">
   <a href="/index.html" class="nav__link">Головна</a>
   <a href="/rules.html" class="nav__link">Регламент</a>
+  <a href="/formats.html" class="nav__link">Формати змагань</a>
   <a href="/register.html" class="nav__link">Реєстрація</a>
   <a href="/live.html" class="nav__link">Live</a>
   <a href="/rating.html" class="nav__link">Рейтинг</a>
