--- a/cabinet.html
+++ b/cabinet.html
@@ -122,6 +122,7 @@
     <nav class="nav">
       <a href="index.html" class="nav__link">Головна</a>
       <a href="rules.html" class="nav__link">Регламент</a>
+      <a href="/formats.html" class="nav__link">Формати змагань</a>
       <a href="register.html" class="nav__link">Реєстрація</a>
       <a href="live.html" class="nav__link">Live</a>
       <a href="rating.html" class="nav__link">Рейтинг</a>
