--- a/formats.html
+++ b/formats.html
@@ -18,6 +18,7 @@
             --color-secondary: #8B0000;
             --color-text: #FFFFFF;
             --color-text-secondary: #CCCCCC;
+            --color-green: #22c55e;
             --border-radius: 12px;
             --spacing-unit: 20px;
             --transition-speed: 0.3s;
@@ -239,14 +240,33 @@
             margin-bottom: 16px;
             border-radius: var(--border-radius);
             overflow: hidden;
-            border: 1px solid rgba(255, 214, 49, 0.2);
             background-color: var(--color-surface);
             transition: all var(--transition-speed) ease;
+            position: relative;
+        }
+
+        /* Градієнтна рамка */
+        .accordion-item::before {
+            content: '';
+            position: absolute;
+            inset: 0;
+            border-radius: var(--border-radius);
+            padding: 2px;
+            background: linear-gradient(135deg, var(--color-primary), var(--color-secondary));
+            -webkit-mask: 
+                linear-gradient(#fff 0 0) content-box, 
+                linear-gradient(#fff 0 0);
+            -webkit-mask-composite: xor;
+            mask-composite: exclude;
+            pointer-events: none;
         }
 
         .accordion-item:hover {
-            border-color: rgba(255, 214, 49, 0.4);
-            box-shadow: 0 0 20px rgba(255, 214, 49, 0.1);
+            box-shadow: 0 0 25px rgba(255, 214, 49, 0.15);
+        }
+
+        .accordion-item:hover::before {
+            background: linear-gradient(135deg, var(--color-green), var(--color-primary));
         }
 
         .accordion-header {
@@ -263,17 +283,20 @@
             justify-content: space-between;
             align-items: center;
             transition: all var(--transition-speed) ease;
+            position: relative;
+            z-index: 1;
         }
 
         .accordion-header:hover {
             background-color: rgba(255, 214, 49, 0.05);
         }
 
+        /* Зелена стрілочка */
         .accordion-header::after {
             content: '';
             width: 20px;
             height: 20px;
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23FFD631'%3E%3Cpath d='M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z'/%3E%3C/svg%3E");
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%2322c55e'%3E%3Cpath d='M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z'/%3E%3C/svg%3E");
             background-repeat: no-repeat;
             background-position: center;
             transition: transform var(--transition-speed) ease;
@@ -346,7 +369,7 @@
 
         .section-title::before {
             content: '→';
-            color: var(--color-primary);
+            color: var(--color-green);
             margin-right: 10px;
             font-weight: 800;
         }
@@ -366,7 +389,7 @@
 
         .format-list li::before {
             content: '•';
-            color: var(--color-primary);
+            color: var(--color-green);
             font-size: 1.5rem;
             position: absolute;
             left: 0;
@@ -374,17 +397,17 @@
         }
 
         .highlight-box {
-            background-color: rgba(255, 214, 49, 0.1);
+            background-color: rgba(34, 197, 94, 0.1);
             border-radius: 10px;
             padding: 22px;
             margin: 25px 0;
-            border-left: 4px solid var(--color-primary);
+            border-left: 4px solid var(--color-green);
         }
 
         .highlight-title {
             font-size: 1.1rem;
             font-weight: 700;
-            color: var(--color-primary);
+            color: var(--color-green);
             margin-top: 0;
             margin-bottom: 10px;
         }
@@ -397,12 +420,13 @@
         /* Індикатор активного елемента */
         .accordion-indicator {
             font-size: 0.8rem;
-            color: rgba(255, 214, 49, 0.7);
-            background-color: rgba(255, 214, 49, 0.1);
+            color: var(--color-green);
+            background-color: rgba(34, 197, 94, 0.15);
             padding: 4px 10px;
             border-radius: 20px;
             margin-left: 15px;
             font-weight: 600;
+            border: 1px solid rgba(34, 197, 94, 0.3);
         }
 
         /* Адаптивність */
@@ -449,6 +473,10 @@
 
             .format-card {
                 padding: 15px;
+            }
+
+            .accordion-indicator {
+                display: none;
             }
         }
     </style>
@@ -773,10 +801,7 @@
                 });
             });
             
-            // Автоматично відкриваємо перший акордеон
-            if (accordionHeaders.length > 0) {
-                accordionHeaders[0].click();
-            }
+            // ВСЕ ЗАКРИТО за замовчуванням — прибрано автовідкриття першого акордеону
 
             // Бургер-меню
             const burger = document.getElementById('burger');
